--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
 h1 {
     padding-top: 30px;
 }
+
+h2 {
+    padding-top: 30px;
+}
+
+h3 {
+    padding-top: 30px;
+}
+
+h4 {
+    padding-top: 30px;
+}
+
+
+
+#avatar {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 100%;
+    height: auto; /* Ensures the aspect ratio is preserved */
+    max-width: 200px; /* Adjust the size to your preference */
+}
+
+.text-justified {
+    text-align: justify;
+}
